--- a/join.html
+++ b/join.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Pholly/join</title>
+    <title>Pholly|join</title>
     <link rel="shortcut icon" href="/icons8-stepper-16.png" type="image/x-icon">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Molengo&display=swap" rel="stylesheet">
